[package]
name = "starkhacks-test"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
elevenlabs-sdk = "0.1.0"
futures-util = "0.3.32"
openai-tools = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smart-default = "0.7.1"
tokio = "1.52.1"
tokio-tungstenite = "0.29.0"
